# data-engineering-technical-assignment-I

./: .env  .gitignore  README.md  docker-compose.yml
database/: 01-init.sh
producer/: Dockerfile  pyproject.toml
producer/producer/: main.py
