[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["Antonino Cangialosi <ninocangialosi@yahoo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
kafka-python3 = "^3.0.0"
websockets = "^10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.3"
bandit = "^1.7.4"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
